--- a/.env
+++ b/.env
@@ -34,5 +34,5 @@ SLACK_WEBHOOK_ENDPOINT=https://hooks.slack.com/services/....
 SITE_BASE_URL=http://localhost/symfony/elearningPlatform/SymfonyCasts/7.%20code-symfony-mailer/start/public/
 
 ###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://9eccac267b23d4:8285034a40f050@smtp.mailtrap.io:2525
 ###< symfony/mailer ###
