--- a/composer.json
+++ b/composer.json
@@ -29,11 +29,14 @@
         "symfony/security-bundle": "^4.0",
         "symfony/serializer-pack": "^1.0",
         "symfony/twig-bundle": "^4.0",
+        "symfony/twig-pack": "^1.0",
         "symfony/validator": "^4.0",
         "symfony/web-server-bundle": "^4.0",
         "symfony/webpack-encore-bundle": "^1.4",
         "symfony/yaml": "^4.0",
-        "twig/extensions": "^1.5"
+        "twig/cssinliner-extra": "^3.0",
+        "twig/extensions": "^1.5",
+        "twig/inky-extra": "^3.0"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.0",
