Chapter 15: PDF: Snappy, wkhtmltopdf & Template Setup

--- a/.env
+++ b/.env
@@ -30,9 +30,16 @@ DATABASE_URL=mysql://root:@127.0.0.1:3306/the_spacebar_mails
 ### CUSTOM VARS
 SLACK_WEBHOOK_ENDPOINT=https://hooks.slack.com/services/....
 ### END CUSTOM VARS
-
-SITE_BASE_URL=http://localhost/symfony/elearningPlatform/SymfonyCasts/7.%20code-symfony-mailer/start/public/
+SITE_BASE_SCHEME=http
+SITE_BASE_HOST=localhost
+SITE_BASE_URL=$SITE_BASE_SCHEME://$SITE_BASE_HOST/symfony/elearningPlatform/SymfonyCasts/7.%20code-symfony-mailer/start/public/
 
 ###> symfony/mailer ###
 MAILER_DSN=smtp://9eccac267b23d4:8285034a40f050@smtp.mailtrap.io:2525
 ###< symfony/mailer ###
+###> knplabs/knp-snappy-bundle ###
+#WKHTMLTOPDF_PATH=/usr/local/bin/wkhtmltopdf
+WKHTMLTOPDF_PATH="/Program Files (x86)/wkhtmltox/bin/wkhtmltopdf"
+#WKHTMLTOIMAGE_PATH=/usr/local/bin/wkhtmltoimage
+WKHTMLTOIMAGE_PATH="/Program Files (x86)/wkhtmltox/bin/wkhtmltoimage"
+###< knplabs/knp-snappy-bundle ###
