Chapter 16: Lets Generate a PDF!

--- a/.env
+++ b/.env
@@ -39,7 +39,7 @@ MAILER_DSN=smtp://9eccac267b23d4:8285034a40f050@smtp.mailtrap.io:2525
 ###< symfony/mailer ###
 ###> knplabs/knp-snappy-bundle ###
 #WKHTMLTOPDF_PATH=/usr/local/bin/wkhtmltopdf
-WKHTMLTOPDF_PATH="/Program Files (x86)/wkhtmltox/bin/wkhtmltopdf"
+WKHTMLTOPDF_PATH=/Users/Roger/bin/wkhtmltopdf
 #WKHTMLTOIMAGE_PATH=/usr/local/bin/wkhtmltoimage
-WKHTMLTOIMAGE_PATH="/Program Files (x86)/wkhtmltox/bin/wkhtmltoimage"
+WKHTMLTOIMAGE_PATH=/Users/Roger/bin/wkhtmltoimage
 ###< knplabs/knp-snappy-bundle ###
