--- a/composer.json
+++ b/composer.json
@@ -55,10 +55,7 @@
         "preferred-install": {
             "*": "dist"
         },
-        "sort-packages": true,
-        "platform": {
-            "php": "7.1.3"
-        }
+        "sort-packages": true
     },
     "autoload": {
         "psr-4": {
