Chapter 21: Functional Testing with Emails

--- a/.env
+++ b/.env
@@ -35,7 +35,7 @@ SITE_BASE_HOST=localhost
 SITE_BASE_URL=$SITE_BASE_SCHEME://$SITE_BASE_HOST/symfony/elearningPlatform/SymfonyCasts/7.%20code-symfony-mailer/start/public/
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://9eccac267b23d4:8285034a40f050@smtp.mailtrap.io:2525
+MAILER_DSN=smtp://localhost
 ###< symfony/mailer ###
 ###> knplabs/knp-snappy-bundle ###
 #WKHTMLTOPDF_PATH=/usr/local/bin/wkhtmltopdf
