--- a/.env.test
+++ b/.env.test
@@ -2,3 +2,5 @@
 KERNEL_CLASS='App\Kernel'
 APP_SECRET='s$cretf0rt3st'
 SYMFONY_DEPRECATIONS_HELPER=999999
+
+MAILER_DSN=smtp://9eccac267b23d4:8285034a40f050@smtp.mailtrap.io:2525
