Chapter 22: Email Delivery & Assertions in Tests

--- a/.env
+++ b/.env
@@ -35,7 +35,7 @@ SITE_BASE_HOST=localhost
 SITE_BASE_URL=$SITE_BASE_SCHEME://$SITE_BASE_HOST/symfony/elearningPlatform/SymfonyCasts/7.%20code-symfony-mailer/start/public/
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://null
 ###< symfony/mailer ###
 ###> knplabs/knp-snappy-bundle ###
 #WKHTMLTOPDF_PATH=/usr/local/bin/wkhtmltopdf
