Chapter 3: SendGrid & All About Transports

--- a/.env
+++ b/.env
@@ -43,3 +43,7 @@ WKHTMLTOPDF_PATH=/Users/Roger/bin/wkhtmltopdf
 #WKHTMLTOIMAGE_PATH=/usr/local/bin/wkhtmltoimage
 WKHTMLTOIMAGE_PATH=/Users/Roger/bin/wkhtmltoimage
 ###< knplabs/knp-snappy-bundle ###
+###> symfony/sendgrid-mailer ###
+# SENDGRID_KEY=
+# MAILER_DSN=smtp://$SENDGRID_KEY@sendgrid
+###< symfony/sendgrid-mailer ###
