Chapter 26: Events & Overriding Recipients

--- a/.env
+++ b/.env
@@ -47,3 +47,5 @@ WKHTMLTOIMAGE_PATH=/Users/Roger/bin/wkhtmltoimage
 # SENDGRID_KEY=
 # MAILER_DSN=smtp://$SENDGRID_KEY@sendgrid
 ###< symfony/sendgrid-mailer ###
+
+DEV_MAIL_RECIPIENT=someone@example.com
