--- a/.env
+++ b/.env
@@ -49,3 +49,10 @@ WKHTMLTOIMAGE_PATH=/Users/Roger/bin/wkhtmltoimage
 ###< symfony/sendgrid-mailer ###
 
 DEV_MAIL_RECIPIENT=someone@example.com
+
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+MESSENGER_TRANSPORT_DSN=doctrine://default
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+###< symfony/messenger ###
